CHANGES
=======

* add github workflow

v2.0.0
------

* fix doc issues for 2.0 (#12)
* fix issues w/ python 3.8 typing
* rtd
* rtd
* rtd
* typo
* rtd updates
* remove old python versions
* try to fix docs theme
* try to fix docs theme
* ChangeLog
* fix docs issue
* ChangeLog
* v2.0 release (#11)
* update README
* v2.0 release candidate (fixes #9, fixes #9) (#10)
* update Pipfile.lock
* reformatted all code w/ black
* update deprecated import and reformat w/ black
* Bump bleach from 3.2.1 to 3.3.0

v1.0.4
------

* update changelog
* update changelog
* add Makefile
* update dependencies
* bump changelog

v1.0.3
------

* allow splitting environment variable values by whitespace
* add build status badge for dev
* add travis config
* remove some extraneous code

v1.0.2
------

* updated changelog
* add missing space
* fix recursion bug
* add stdeb.cfg for debian packaging

v1.0.1
------

* improve support for booleans in environment vars

v1.0.0
------

* add license
* add AUTHORS and ChangeLog per pbr
* update README
* add json and yaml convenience methods
* more work removing string > list conversions
* stop doing weird string > list conversions
* add tests and fix bugs exposed
* update readme
* replace readme with rst version, minor housekeeping
* rename project to cfitall; mvp functionality; tests needed
* initial commit