@@ -1,11 +1,11 @@
 [metadata]
 name = cfitall
 author = Chris Haumesser
-author-email = chris.haumesser@gmail.com
+author_email = chris.haumesser@gmail.com
 summary = a configuration manager for python apps
-description-file = README.rst
-requires-python = >=3.8
-home-page = https://github.com/wryfi/cfitall
+description_file = README.rst
+requires_python = >=3.8
+home_page = https://github.com/wryfi/cfitall
 classifier =
     License :: OSI Approved :: MIT License
     Natural Language :: English
@@ -16,10 +16,10 @@ classifier =
     Programming Language :: Python :: 3.12
 
 [options]
-packages = find:
 install_requires =
     PyYAML <= 7
 
 [files]
+packages = find:
 data_files =
     tests = tests/*
